--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -8,11 +8,11 @@ services:
       - app 
     volumes:
        - ./docker/web/default.conf:/etc/nginx/conf.d/default.conf
-       - ./my-laravel-app:/var/www/html/
+       - .:/var/www/html/
   app:
     build: ./docker/php
     volumes:
-     - ./my-laravel-app:/var/www/html
+     - .:/var/www/html
     depends_on:
       - mysql
   mysql:
